* Bug #35654: adapt startup wizard graphics
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54590 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/app/about.en.html
+++ b/management/univention-management-console-frontend/umc/app/about.en.html
@@ -1,23 +1,23 @@
 <h1>Univention Management Console</h1>
-<table style='background:url({path}/about.png) no-repeat; border-collapse: separate; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<table style='background:url({path}/about.svg) no-repeat; border-collapse: separate; background-position:40px 15px; padding-left:200px; min-height:160px;'>
 	<tr>
-		<td>Server</td>
+		<td><b>Server</b></td>
 		<td>{server}</td>
 	</tr>
 	<tr>
-		<td>UCS Version</td>
+		<td><b>UCS Version</b></td>
 		<td>{ucs_version}</td>
 	</tr>
 	<tr>
-		<td>UMC Version</td>
+		<td><b>UMC Version</b></td>
 		<td>{umc_version}</td>
 	</tr>
 	<tr>
-		<td>Date of expiry of the SSL root certificate</td>
+		<td><b>Date of expiry of the<br/>SSL root certificate</b></td>
 		<td>{ssl_validity_root}</td>
 	</tr>
 	<tr>
-		<td>Date of expiry of the SSL certificate for this system</td>
+		<td><b>Date of expiry of the<br/>SSL certificate for this system</b></td>
 		<td>{ssl_validity_host}</td>
 	</tr>
 </table>
