--- a/management/univention-management-console-frontend/umc/app/activation.de.html
+++ b/management/univention-management-console-frontend/umc/app/activation.de.html
@@ -1,5 +1,5 @@
 <h1>Aktivierung von Univention Corporate Server</h1>
-<div style='background:url({path}/activation.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<div style='background:url({path}/activation.svg) no-repeat; background-position:20px 5px; padding-left:200px; min-height:160px;'>
 	<p>Sie können nun eine gültige E-Mail-Adresse angeben, um das UCS-System für die Verwendung des App Centers freizuschalten. Es wird Ihnen dann in Kürze ein aktualisierter Lizenzschlüssel zugeschickt, der über den Lizenzdialog im Einstellungsmenü (oben rechts) eingespielt werden kann.</p>
 	<p>
 		<form>
