--- a/management/univention-management-console-frontend/umc/app/activation.en.html
+++ b/management/univention-management-console-frontend/umc/app/activation.en.html
@@ -1,5 +1,5 @@
 <h1>Activation of Univention Corporate Server</h1>
-<div style='background:url({path}/activation.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<div style='background:url({path}/activation.svg) no-repeat; background-position:20px 5px; padding-left:200px; min-height:160px;'>
 	<p>You may now enter a valid e-mail address in order to activate the UCS system to use the App Center. Within a short time, you will receive an updated license key. This key can then be uploaded via the license dialog in the settings menu (on the top right).
 	<p>
 		<form>
