--- a/management/univention-management-console-frontend/umc/app/help.de.html
+++ b/management/univention-management-console-frontend/umc/app/help.de.html
@@ -1,5 +1,5 @@
 <h1>Weiterführende Informationen</h1>
-<div style='background:url({path}/help.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<div style='background:url({path}/help.svg) no-repeat; background-position:35px 20px; padding-left:200px; min-height:160px;'>
 	<p>Detaillierte Informationen zur Verwendung der Univention Management Console befinden sich im UCS-Handbuch. Das Handbuch und weitere wichtige Informationen sind unter den folgenden Links abrufbar:</p>
 	<ul>
 		<li><a href="http://docs.univention.de/de/ucs.html" target="_blank">Online-Dokumentation</a></li>
