--- a/management/univention-management-console-frontend/umc/app/welcome.de.html
+++ b/management/univention-management-console-frontend/umc/app/welcome.de.html
@@ -1,5 +1,5 @@
 <h1>Willkommen bei Univention Management Console</h1>
-<div style='background:url({path}/welcome.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<div style='background:url({path}/welcome.svg) no-repeat; background-position:20px 5px; padding-left:200px; min-height:160px;'>
 	<p>Herzlichen Glückwunsch, Sie haben die Einrichtung Ihres Univention Corporate Servers (UCS) erfolgreich abgeschlossen und sind nun an der Univention Management Console (UMC) angemeldet. UMC ist die zentrale Webanwendung zur komfortablen Domänen- und Rechnerverwaltung in UCS.</p>
 	<p>Waren Sie mit der Einrichtung des Systems zufrieden?</p>
 	<p><form>
