--- a/management/univention-management-console-frontend/umc/app/about.de.html
+++ b/management/univention-management-console-frontend/umc/app/about.de.html
@@ -1,23 +1,23 @@
 <h1>Univention Management Console</h1>
-<table style='background:url({path}/about.png) no-repeat; border-collapse: separate; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<table style='background:url({path}/about.svg) no-repeat; border-collapse: separate; background-position:40px 15px; padding-left:200px; min-height:160px;'>
 	<tr>
-		<td>Server</td>
+		<td><b>Server</b></td>
 		<td>{server}</td>
 	</tr>
 	<tr>
-		<td>UCS Version</td>
+		<td><b>UCS Version</b></td>
 		<td>{ucs_version}</td>
 	</tr>
 	<tr>
-		<td>UMC Version</td>
+		<td><b>UMC Version</b></td>
 		<td>{umc_version}</td>
 	</tr>
 	<tr>
-		<td>Gültigkeitsdatum des SSL-Wurzel-Zertifikats</td>
+		<td><b>Gültigkeitsdatum des<br/>SSL-Wurzel-Zertifikats</b></td>
 		<td>{ssl_validity_root}</td>
 	</tr>
 	<tr>
-		<td>Gültigkeitsdatum des SSL-Rechner-Zertifikats</td>
+		<td><b>Gültigkeitsdatum des<br/>SSL-Rechner-Zertifikats</b></td>
 		<td>{ssl_validity_host}</td>
 	</tr>
 </table>
