--- a/management/univention-management-console-frontend/umc/app/help.en.html
+++ b/management/univention-management-console-frontend/umc/app/help.en.html
@@ -1,5 +1,5 @@
 <h1>Further Information</h1>
-<div style='background:url({path}/help.png) no-repeat; background-position:5px 5px; padding-left:165px; min-height:160px;'>
+<div style='background:url({path}/help.svg) no-repeat; background-position:35px 20px; padding-left:200px; min-height:160px;'>
 	<p>Detailed usage information on Univention Management Console can be found in the UCS manual. The manual as well as further important information are available via the following links:</p>
 	<ul>
 		<li><a href="http://docs.univention.de/en/ucs.html" target="_blank">Online documentation</a></li>
