* Bug #35654: adjust styling of license dialogs
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54610 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/js/udm/license.html
+++ b/management/univention-management-console-module-udm/umc/js/udm/license.html
@@ -1,31 +1,30 @@
-<h1>{title}</h1>
 <table>
   <tr>
-	<td>{labelLicenseType}</td>
+	<td><b>{labelLicenseType}</b></td>
 	<td>{licenseType}</td>
   </tr>
   <tr>
-	<td>{labelBase}</td>
+	<td><b>{labelBase}</b></td>
 	<td>{base}</td>
   </tr>
   <tr>
-	<td>{labelUser}</td>
+	<td><b>{labelUser}</b></td>
 	<td>{user}</td>
   </tr>
   <tr>
-	<td>{labelClients}</td>
+	<td><b>{labelClients}</b></td>
 	<td>{clients}</td>
   </tr>
   <tr>
-	<td>{labelDesktops}</td>
+	<td><b>{labelDesktops}</b></td>
 	<td>{desktops}</td>
   </tr>
   <tr>
-	<td>{labelEndDate}</td>
+	<td><b>{labelEndDate}</b></td>
 	<td>{endDate}</td>
   </tr>
   <tr>
-	<td>{labelProduct}</td>
+	<td><b>{labelProduct}</b></td>
 	<td>{product}</td>
   </tr>
 </table>
