--- a/management/univention-management-console-module-udm/umc/js/udm/license_v2.html
+++ b/management/univention-management-console-module-udm/umc/js/udm/license_v2.html
@@ -1,55 +1,54 @@
-<h1>{title}</h1>
 <table>
   <tr>
-	<td>{labelLicenseType}</td>
+	<td><b>{labelLicenseType}</b></td>
 	<td>{licenseType}</td>
   </tr>
   <tr>
-	<td>{labelBase}</td>
+	<td><b>{labelBase}</b></td>
 	<td>{base}</td>
   </tr>
   <tr>
-	<td>{labelServers}</td>
+	<td><b>{labelServers}</b></td>
 	<td>{servers}</td>
   </tr>
   <tr>
-	<td>{labelUser}</td>
+	<td><b>{labelUser}</b></td>
 	<td>{user}</td>
   </tr>
   <tr>
-	<td>{labelManagedClients}</td>
+	<td><b>{labelManagedClients}</b></td>
 	<td>{managedclients}</td>
   </tr>
   <tr>
-	<td>{labelCorporateClients}</td>
+	<td><b>{labelCorporateClients}</b></td>
 	<td>{corporateclients}</td>
   </tr>
   <tr>
-	<td>{labelDVSUsers}</td>
+	<td><b>{labelDVSUsers}</b></td>
 	<td>{dvsusers}</td>
   </tr>
   <tr>
-	<td>{labelDVSClients}</td>
+	<td><b>{labelDVSClients}</b></td>
 	<td>{dvsclients}</td>
   </tr>
   <tr>
-	<td>{labelSupport}</td>
+	<td><b>{labelSupport}</b></td>
 	<td>{support}</td>
   </tr>
   <tr>
-	<td>{labelPremiumSupport}</td>
+	<td><b>{labelPremiumSupport}</b></td>
 	<td>{premiumsupport}</td>
   </tr>
   <tr>
-	<td>{labelKeyID}</td>
+	<td><b>{labelKeyID}</b></td>
 	<td>{keyID}</td>
   </tr>
   <tr>
-	<td>{labelEndDate}</td>
+	<td><b>{labelEndDate}</b></td>
 	<td>{endDate}</td>
   </tr>
   <tr>
-	<td>{labelProduct}</td>
+	<td><b>{labelProduct}</b></td>
 	<td>{product}</td>
   </tr>
 </table>
