Bug #35654: initiate host menu with fqdn Bug #35654: width parameter is obsolete Bug #35654: allow to give a container to render.layout
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54844 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/index.html
+++ b/management/univention-management-console-frontend/index.html
@@ -67,8 +67,7 @@
 							password: getQuery('password'),
 							module: getQuery('module'),
 							flavor: getQuery('flavor'),
-							overview: getQuery('overview', true),
-							width: getQuery('width')
+							overview: getQuery('overview', true)
 						});
 					});
 				}
