adapted styling uf language selection box (Bug #36095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54958 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -63,12 +63,7 @@
 					<div id="header-left">
 					</div>
 					<div id="header-right">
-						<div class="dropdown">
-							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-								<span class="button-text"></span><span class="arrow"></span>
-							</button>
-							<ul id="language-switcher" class="dropdown-menu" role="menu"></ul>
-						</div>
+						<div class="dropdown" id="dropDownButton"></div>
 					</div>
 				</div>
 			</div>
@@ -77,10 +72,9 @@
 					<h1 id="site-title" data-i18n="claimHead"></h1>
 					<h2 id="header-claim" data-i18n="claim"></h2>
 				</div>
-				<div id="category-bar">
-				</div>
+				<div id="category-bar"></div>
 				<div id="content" class="tab-content">
-					<!--<noscript>
+					<noscript>
 						<div class="container tab-pane">
 							<ul class="items">
 								<li class="warning">
@@ -94,7 +88,7 @@
 								</li>
 							</ul>
 						</div>
-					</noscript>-->
+					</noscript>
 					<div class="galleryTab" id="service-tab">
 						<div class="warning dijitHidden" id="no-service">
 							<div class="wrapper">
