Bug #36095: * replaced tags with actual english text in index.html
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54993 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Welcome to the Univention Corporate Server</title>
+		<title>Welcome to Univention Corporate Server</title>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="stylesheet" href="js/dijit/themes/dijit.css">
 		<link rel="stylesheet" href="css/bootstrap.css"/>
@@ -69,8 +69,8 @@
 			</div>
 			<div class="container">
 				<div id="title" class="dijitHidden">
-					<h1 id="site-title" data-i18n="claimHead"></h1>
-					<h2 id="header-claim" data-i18n="claim"></h2>
+					<h1 id="site-title" data-i18n="Welcome to Univention Corporate Server"></h1>
+					<h2 id="header-claim" data-i18n="{hostname}.{domainname}"></h2>
 				</div>
 				<div id="category-bar"></div>
 				<div id="content" class="tab-content">
@@ -93,8 +93,8 @@
 						<div class="warning dijitHidden" id="no-service">
 							<div class="wrapper">
 								<div class="icon"></div>
-								<div class="title" data-i18n="noServiceTitle"></div>
-								<div class="text" data-i18n="noServiceDescription"></div>
+								<div class="title" data-i18n="There are currently no user web services installed."></div>
+								<div class="text" data-i18n="Additional services may be installed in the category <a href="#admin">Administration</a> via Univention Management Console."></div>
 							</div>
 						</div>
 					</div>
@@ -105,15 +105,15 @@
 		</div>
 		<div class="footer" id="footer" role="contentinfo">
 			<ul>
-				<li><a href="http://www.univention.com/products/ucs/univention-app-center/" data-i18n="apps">App Catalogue</a></li>
-				<li><a href="http://www.univention.de/en/products/" data-i18n="products">Further Products</a></li>
-				<li><a href="http://www.univention.de/en/" data-i18n="univention_website">Univention Website</a></li>
+				<li><a href="http://www.univention.com/products/ucs/univention-app-center/" data-i18n="App Catalogue"></a></li>
+				<li><a href="http://www.univention.de/en/products/" data-i18n="Further Products"></a></li>
+				<li><a href="http://www.univention.de/en/" data-i18n="Univention Website"></a></li>
 			<!-- </ul>
 				 <ul> //-->
-				<li><a href="http://docs.univention.de/en.html" data-i18n="manual">Manual for Univention Corporate Server</a></li>
-				<li><a href="http://sdb.univention.de/" data-i18n="sdb">Univention Support Database</a></li>
-				<li><a href="http://wiki.univention.de/index.php?title=Hauptseite" data-i18n="wiki">Univention Wiki</a></li>
-				<li><a href="http://forum.univention.de/" data-i18n="forum">Univention Forum</a></li>
+				<li><a href="http://docs.univention.de/en.html" data-i18n="Manual for Univention Corporate Serve"></a></li>
+				<li><a href="http://sdb.univention.de/" data-i18n="Univention Support Database"></a></li>
+				<li><a href="http://wiki.univention.de/index.php?title=Hauptseite" data-i18n="Univention Wiki"></a></li>
+				<li><a href="http://forum.univention.de/" data-i18n="Univention Forum"></a></li>
 			</ul>
 		</div>
 	</body>
