Bug #36095: * renewed links and adapted translation of links * fixed typo in startsite.js which prevented selection of language
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55001 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -105,12 +105,12 @@
 		</div>
 		<div class="footer" id="footer" role="contentinfo">
 			<ul>
-				<li><a href="http://www.univention.com/products/ucs/univention-app-center/" data-i18n="App Catalogue"></a></li>
-				<li><a href="http://www.univention.de/en/products/" data-i18n="Further Products"></a></li>
-				<li><a href="http://www.univention.de/en/" data-i18n="Univention Website"></a></li>
+				<li><a href="https://www.univention.com/products/univention-app-center/" data-i18n="App Catalogue"></a></li>
+				<li><a href="https://www.univention.com/products/" data-i18n="Further Products"></a></li>
+				<li><a href="https://www.univention.com" data-i18n="Univention Website"></a></li>
 			<!-- </ul>
 				 <ul> //-->
-				<li><a href="http://docs.univention.de/en.html" data-i18n="Manual for Univention Corporate Serve"></a></li>
+				<li><a href="http://docs.univention.de/en.html" data-i18n="Manual for Univention Corporate Server"></a></li>
 				<li><a href="http://sdb.univention.de/" data-i18n="Univention Support Database"></a></li>
 				<li><a href="http://wiki.univention.de/index.php?title=Hauptseite" data-i18n="Univention Wiki"></a></li>
 				<li><a href="http://forum.univention.de/" data-i18n="Univention Forum"></a></li>
