--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -58,6 +58,10 @@
 									<div class="title">JavaScript required</div>
 									<div class="text">
 										A browser with JavaScript enabled is required in order to use this service.
+										<![if IE]-->
+										<br /><br />
+										Please check your security settings and add this address to your trusted sites.
+										<![endif]-->
 									</div>
 								</div>
 							</div>
