--- a/services/univention-apache/www/ucs-overview/index.html
+++ b/services/univention-apache/www/ucs-overview/index.html
@@ -30,40 +30,16 @@
 				</div>
 				<div id="category-bar"></div>
 				<div id="content" class="tab-content">
-					<!--
-					<noscript>
-						<div class="container tab-pane">
-							<ul class="items">
-								<li class="warning">
-									<span class="wrapper">
-										<span class="icon"></span>
-										<span class="title">JavaScript required</span>
-										<span class="text">
-											A browser with JavaScript enabled is required in order to use this service.
-										</span>
-									</span>
-								</li>
-							</ul>
-						</div>
-					</noscript>
-					//-->
 					<noscript>
 						<div>
 							<h1 class="no-js">Welcome to Univention Corporate Server</h1>
 						</div>
 						<div class="galleryTab">
 							<div class="warning" id="no-js">
-								<div class="wrapper">
-									<div class="icon"></div>
-									<div class="title">JavaScript required</div>
-									<div class="text">
-										A browser with JavaScript enabled is required in order to use this service.
-										<![if IE]-->
-										<br /><br />
-										Please check your security settings and add this address to your trusted sites.
-										<![endif]-->
-									</div>
-								</div>
+								<div class="icon"></div>
+								<div class="title">JavaScript required</div>
+								<p>A browser with JavaScript enabled is required in order to use this service.</p>
+								<p><!--[if IE]>Please check your security settings and add this address to your trusted sites.<![endif]--></p>
 							</div>
 						</div>
 					</noscript>
